PMD sweep, small optimizations
git-svn-id: svn://source.pentaho.org/svnkettleroot/Kettle/trunk@4955 5fb7f6ec-07c1-534a-b4ca-9155e429e800